# search-service-take-1

./: .gitignore  README.md  build-plan.md  pyproject.toml
docs/: contracts.md  decisions.md  open-questions.md  roadmap.md  things-to-be-aware-of.md
docs/diagrams/: architecture.md  project-structure.md
examples/: abr_typesense_helpers.py  sdk_playground.ipynb  walkthrough.ipynb
search_service/: __init__.py  client.py  exceptions.py
search_service/_internal/: context.py  enums.py  plan.py
search_service/adapters/: __init__.py  base.py  chroma.py  in_memory.py
search_service/indexes/: __init__.py  base.py  runtime.py
search_service/models/: __init__.py  llm.py  mercury.py
search_service/orchestration/: __init__.py  aitl_context.py  analyzer.py  classifier.py  evaluator.py  extractor.py  followup.py  planner.py
search_service/schemas/: __init__.py  config.py  enums.py  followup.py  query.py  result.py  trace.py
search_service/telemetry/: __init__.py  events.py  tracer.py
src/search_harness/: __init__.py
tests/: test_analyzer.py  test_chroma_adapter.py  test_in_memory_adapter.py  test_mercury.py  test_package.py  test_planner_evaluator.py  test_tracer.py
