[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-service"
version = "0.1.0"
description = "A Python-first search orchestration SDK with LLM-powered query understanding, iterative search, and ambiguity handling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "William Ryan" },
]

dependencies = [
    "pydantic>=2.0",
    "typesense>=0.21.0",
    "openai>=1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
