[project]
name = "search-harness"
version = "0.1.0"
description = "A Python-first search orchestration SDK with LLM-powered query understanding, iterative search, and ambiguity handling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "William Ryan" },
]
dependencies = [
    "pydantic>=2.0",
    "typesense>=0.21.0",
    "openai>=1.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=1.0"]

[project.urls]
Homepage = "https://github.com/w-v-r/search-harness"
Repository = "https://github.com/w-v-r/search-harness"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_service"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live API tests (requires credentials; skip in CI unless set)",
]
