[project]
name = "search-harness"
version = "0.1.0"
description = "A fresh Python project scaffold for the next search harness iteration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "William Ryan" },
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_harness"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
